[gd_scene load_steps=8 format=3 uid="uid://bi17wnlyycsul"]

[ext_resource type="Script" path="res://SpellCaster.gd" id="1_0gs4o"]
[ext_resource type="Texture2D" uid="uid://bkwbob5p32asb" path="res://art/Additionals/images_-_2024-04-26T180346.456-transformed-removebg-preview.png" id="2_4vi5n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8xns1"]
atlas = ExtResource("2_4vi5n")
region = Rect2(306, 0, 102, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjpti"]
atlas = ExtResource("2_4vi5n")
region = Rect2(408, 0, 102, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce0st"]
atlas = ExtResource("2_4vi5n")
region = Rect2(306, 153, 102, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uoi0"]
atlas = ExtResource("2_4vi5n")
region = Rect2(408, 153, 102, 153)

[sub_resource type="SpriteFrames" id="SpriteFrames_ep27v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xns1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjpti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce0st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uoi0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="SpellCaster" type="StaticBody2D"]
position = Vector2(177, 111)
script = ExtResource("1_0gs4o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(23, 33)
scale = Vector2(0.737288, 0.642857)
sprite_frames = SubResource("SpriteFrames_ep27v")
animation = &"idle"
frame_progress = 0.468373

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -31.0
offset_top = -73.0
offset_right = 125.0
offset_bottom = -9.0
color = Color(0.458824, 0.145098, 1, 0.376471)
metadata/_edit_use_anchors_ = true

[node name="Up" type="Button" parent="."]
offset_left = -28.0
offset_top = -49.0
offset_right = 42.0
offset_bottom = -18.0
scale = Vector2(0.5, 0.5)
text = "Left"
metadata/_edit_use_anchors_ = true

[node name="Down" type="Button" parent="."]
offset_left = 11.0
offset_top = -49.0
offset_right = 81.0
offset_bottom = -18.0
scale = Vector2(0.5, 0.5)
text = "Right"
metadata/_edit_use_anchors_ = true

[node name="Add" type="Button" parent="."]
offset_left = -14.0
offset_top = -29.0
offset_right = 56.0
offset_bottom = 2.0
scale = Vector2(0.5, 0.5)
text = "Add
"
metadata/_edit_use_anchors_ = true

[node name="CastSpell" type="Button" parent="."]
offset_left = 79.0
offset_top = -28.0
offset_right = 162.0
offset_bottom = 3.0
scale = Vector2(0.5, 0.5)
text = "Cast Spell"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 55.0
offset_top = -71.0
offset_right = 215.0
offset_bottom = -31.0
scale = Vector2(0.4, 0.4)
text = "Will of Witch :30%"
metadata/_edit_use_anchors_ = true

[node name="Condition" type="RichTextLabel" parent="."]
offset_left = 56.0
offset_top = -49.0
offset_right = 216.0
offset_bottom = -9.0
scale = Vector2(0.4, 0.4)
text = "------"
metadata/_edit_use_anchors_ = true

[node name="ItemName" type="RichTextLabel" parent="."]
offset_left = 55.0
offset_top = -60.0
offset_right = 215.0
offset_bottom = -20.0
scale = Vector2(0.4, 0.4)
text = "???"
metadata/_edit_use_anchors_ = true

[node name="Next" type="Button" parent="."]
offset_left = 48.0
offset_top = -28.0
offset_right = 102.0
offset_bottom = 3.0
scale = Vector2(0.5, 0.5)
text = "Next"
metadata/_edit_use_anchors_ = true

[node name="Ingredient" type="RichTextLabel" parent="."]
offset_left = -25.0
offset_top = -69.0
offset_right = 135.0
offset_bottom = -29.0
scale = Vector2(0.4, 0.4)
text = "xxxxxxx"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="CastSpell" to="." method="_on_cast_spell_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
